# Cross-platform-process-IPC-Library

./: README.md  minix_sync.sh
experiments-and-demos/: abc_file_generator.sh
experiments-and-demos/boost/: CMakeLists.txt  README.md
experiments-and-demos/boost/include/: CMakeLists.txt  README.md
experiments-and-demos/boost/include/src/: main
experiments-and-demos/boost/ipc_mem/: CMakeLists.txt  README.md  fmap_shmem_test  shmem_test
experiments-and-demos/boost/ipc_mem/src/: fmap_shmem_test.cpp  shmem_managed_test.cpp  shmem_test.cpp
experiments-and-demos/boost/src/: main.cpp
experiments-and-demos/c++s/: manyargs.cpp  test
experiments-and-demos/examples/fifo/: combined  combined.cpp  readme.md
experiments-and-demos/examples/map_shared/anonymous/: file.txt  writer  writer.cpp
experiments-and-demos/examples/map_shared/file/: watcher  watcher.cpp
experiments-and-demos/examples/mmap/: b.txt  c  c.txt  d  d.txt  test.sh
experiments-and-demos/examples/mq/: arbiter  arbiter.cpp  player
experiments-and-demos/hello/: CMakeLists.txt  hello.cpp
experiments-and-demos/pipes/: CMakeLists.txt  README.md  child_windows.cpp  file.txt  main_linux.cpp  main_windows.cpp  test
experiments-and-demos/pipes_old/: README.md  file.txt  test.sh
experiments-and-demos/pipes_old/src/: main.cpp
experiments-and-demos/shared_memory/: file.txt  first_process.cpp  second_process.cpp
experiments-and-demos/sweet_dreams/: README.md
experiments-and-demos/text/: bigfile.txt  file10.txt  file3.txt  file7.txt  file9.txt
experiments-and-demos/text/subfolder/: file1.txt  file2.txt  file4.txt  file5.txt  file6.txt  file8.txt
experiments-and-demos/the_world_of_pipes/: list_of_pipes.cpp
exploring_windows/basic_process/: README.md  child.cpp  create.cpp  parent.cpp
exploring_windows/examples/: piping_test.cpp  rw.cpp  test.cpp
exploring_windows/files/: file.txt  open_file_read.cpp
exploring_windows/piped_process/: child.cpp  file.txt  parent.cpp
lib/: CMakeLists.txt  demo.cpp
lib/linux/pipc/: errors_and_warnings.hpp
lib/linux/pipc/fifo/: fifo.hpp  t  t.cpp
lib/linux/pipc/process/: a.out  basic_process_test.cpp  conveyor.cpp  cool_process_test.cpp  coolexec.hpp  coolexec_test.cpp  et  exception_test.cpp  forkprocess  forwarding_test.cpp  in.txt  name_hello.txt  piped_process_test.cpp  piped_process_test.sh  process.hpp  processhpp  run_grab_test  run_grab_test.cpp  rw
lib/linux/pipc/shmem/: shmem.hpp  test.cpp
lib/windows/pipc/fifo/: t.cpp  test.cpp
lib/windows/pipc/process/: CMakeLists.txt  err.txt  hello.cpp  piped_process_test.cpp  tcpp
lib/windows/pipc/shmem/: share_test.cpp  shmem.hpp  t.cpp  tt.cpp
linux/: ERRORS.txt  littletest.cpp  mymmap.cpp  test
linux/examples/map_shared/: readme.md
linux/examples/map_shared/anonymous/: watcher  watcher.cpp
linux/examples/map_shared/file/: writer  writer.cpp
linux/examples/mmap/: a  a.cpp  a.txt  b  b.cpp  c.cpp  d.cpp  file.txt
linux/examples/mq/: player.cpp
linux/fifo/: fifo.hpp  test  test.cpp
linux/process/: atest.sh  coolproc_test.cpp  errors_and_warnings.hpp  forkprocess.cpp  out.txt  piping_test  process.hpp  test
linux/shmem/: shmem.hpp  test  test.cpp
theory/: cat.proc.1515.maps.txt  cat.proc.interrupts.txt  file.txt  ls.-la.proc.1515.map_files.txt  ls.proc.115.map_files.txt  process_demo.sh
windows/fifo/: fifo.hpp  test.cpp  test.sh
windows/process/: basic_process_test.cpp  file_forward_test.cpp  ftest.cpp  out.txt  process.hpp  vector_to_chararr.hpp
windows/shmem/: basic_test.cpp
